--- a/src/styles/layouts/_sidebar.scss
+++ b/src/styles/layouts/_sidebar.scss
@@ -43,7 +43,7 @@
         font-size: $font-size-xl;
         border-radius: 50%;
         cursor: pointer;
-        z-index: 5;
+        z-index: $z-index-max;
         transition: right $transition-durations ease-out;
     }
 
@@ -107,7 +107,7 @@
         border-top: 1px solid $color-border-normal;
         border-bottom: 1px solid $color-border-normal;
         @include cardShadow-1;
-        z-index: 3;
+        z-index: $z-index-sidebar;
         opacity: 1;
         transition: all $transition-durations ease-out;
     }
@@ -169,7 +169,7 @@
 .pnd-sidebar {
     &__content {
         position: absolute;
-        z-index: 1;
+        z-index: $z-index-sidebar - 2;
         top: 0;
         right: 0;
         width: $sidebar-exploded-width;
